samples/_failures_safe/1761253073_ad464d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05f94aca.c: In function ‘main’:
./samples/SAFE/__tmp_05f94aca.c:160:20: error: missing terminating " character
  160 |             printf("Invalid format. Please enter three numbers.\n
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_05f94aca.c:160:13: error: expected expression at end of input
  160 |             printf("Invalid format. Please enter three numbers.\n
      |             ^~~~~~
./samples/SAFE/__tmp_05f94aca.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05f94aca.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05f94aca.c:160:13: error: expected declaration or statement at end of input
